@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mms] Add attachment download links to smartmobile view (Request #11379).
 * [mms] Indicate deleted messages with strikethrough in smartmobile mailbox listing (Request #11362).
 * [mms] Show polled children in smartmobile folder list when parent mailbox is not polled (Bug #11238).
 * [mms] More complete handling of linked data in subject header across views (Bug #11372).
@@ -2662,6 +2663,7 @@
    <date>2012-08-24</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mms] Add attachment download links to smartmobile view (Request #11379).
 * [mms] Indicate deleted messages with strikethrough in smartmobile mailbox listing (Request #11362).
 * [mms] Show polled children in smartmobile folder list when parent mailbox is not polled (Bug #11238).
 * [mms] More complete handling of linked data in subject header across views (Bug #11372).
